Sep 15, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.6

Sep 12, 2010 - chris
o the unix daemon was ported to a Win32 Service (which can also run in
    foreground)

Sep 07, 2010 - chris
o the tutorial is no longer part of the Doxygen files; instead it's now 
    online in a wiki: http://wiki.github.com/cruppstahl/hamsterdb
o several functions are now deprecated:
    use ham_open_ex instead of ham_open
    use ham_create_ex instead of ham_create
    use ham_env_open_ex instead of ham_env_open
    use ham_env_create_ex instead of ham_env_create

Aug 31, 2010 - chris
o fixed compilation on newest ArchLinux (gcc 4.5.1) - thanks, zebul666

Aug 28, 2010 - chris
o created MSVC projects for the server and the new samples; all MSVC
        projects and workspaces were updated to Visual Studio 2009

Aug 26, 2010 - chris
o ham_flush is now deprecated, use ham_env_flush instead; both functions
	had very similar functionality

Aug 25, 2010 - chris
o renamed ham/hamserver.h to ham/hamsterdb_srv.h; all symbols were renamed
    from hamserver_XXX to ham_srv_XXX
o removed the dependency to protobuf-c; now directly using google's protobuf
    (for C++)

Aug 11, 2010 - chris
o improved the documentation in hamsterdb.h

Aug 11, 2010 - chris
o added a unix daemon (tools/hamsrvd.c) which can serve multiple Environments.
    configuration is read from a json file (a sample configuration is
    included in tools/example.config)

Aug 10, 2010 - chris
o the server can now write access logfiles and error logfiles; the 
	hamserver_config_t structure was modified

Aug 09, 2010 - chris
o fixed a few memory leaks in remote handling

Aug 04, 2010 - chris
o improved hamserver.h documentation; also, all functions in hamserver.h
	no longer return bool but a proper status value

Aug 03, 2010 - chris
o fixed approximate matching over remote connections - the keys were
	not propagated back to the client